--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Ashley Feese | Full-Stack Developer</title>
+    <!-- change  -->
     <link rel="shortcut icon" href="%PUBLIC_URL%/tab-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--
