--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Ashley Feese | Full-Stack Developer</title>
     <!-- change  -->
-    <link rel="shortcut icon" href="%PUBLIC_URL%/tab-logo.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/purpleCircle.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
